fix: nested locale

--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -73,6 +73,11 @@ import { Authorization } from '../__fixtures__';
             options={countries}
           />
           <Field
+            name="select"
+            type="select"
+            options={countries}
+          />
+          <Field
             name="freeSolo"
             type="autocomplete"
             options={countries}
