fix: cleanup old deps and clear selection after drag

--- a/packages/q3-ui-filemanager/src/FileManager/FileManager.stories.mdx
+++ b/packages/q3-ui-filemanager/src/FileManager/FileManager.stories.mdx
@@ -35,7 +35,7 @@ import Fixtures from '../../tests/fixtures';
       <FileManager canSee={false} />
     </Fixtures>
   </Story>
-  <Story name="List">
+  <Story name="Gallery/List">
     <Fixtures ops={['Read', 'Create', 'Delete', 'Update']}>
       <FileManager initialView="list" />
     </Fixtures>
