refactor: segment and nav list items

--- a/packages/q3-admin/__fixtures__/App.stories.mdx
+++ b/packages/q3-admin/__fixtures__/App.stories.mdx
@@ -12,7 +12,7 @@ import App from './App';
 
 <Preview>
   <Story name="Table">
-    <App initialPath="/shows" />
+    <App initialPath="/shows?demo<=2021-08-01&demo>=2021-01-01&search=Testing3" />
   </Story>
 </Preview>
 
