style: better segments for docs

--- a/packages/q3-ui-navbar/src/SegmentsProvider/SegmentsProvider.stories.mdx
+++ b/packages/q3-ui-navbar/src/SegmentsProvider/SegmentsProvider.stories.mdx
@@ -17,8 +17,8 @@ import SegmentsProvider from './SegmentsProvider';
 
 The `SegmentsProvider` handles the initial data fetching and
 state setup. You'll require this component in your tree to
-use `NavBar` or any of its hooks. When inspecting the
-`NavBar` story's code, this provider lives inside the
+use `Navbar` or any of its hooks. When inspecting the
+`Navbar` story's code, this provider lives inside the
 `Fixtures` component, used exclusively for demonstration and
 testing.
 
