chore: ability to overwrite select default text

--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -92,6 +92,7 @@ import { Authorization } from '../__fixtures__';
             name="select"
             type="select"
             options={countries}
+            chooseOptionLabel="Pick a country"
           />
           <Field
             name="freeSolo"
