feat: notifications archive with clear all

--- a/packages/q3-admin/__fixtures__/App.stories.mdx
+++ b/packages/q3-admin/__fixtures__/App.stories.mdx
@@ -36,7 +36,13 @@ import App from './App';
 
 <Preview>
   <Story name="Profile notifications">
-    <App initialPath="/account/notifications" />
+    <App initialPath="/notifications" />
+  </Story>
+</Preview>
+
+<Preview>
+  <Story name="Profile notification settings">
+    <App initialPath="/account/notification-settings" />
   </Story>
 </Preview>
 
