style: notifications select buttons

--- a/packages/q3-ui-notifications/src/__stories__/Notifications.stories.mdx
+++ b/packages/q3-ui-notifications/src/__stories__/Notifications.stories.mdx
@@ -5,7 +5,7 @@ import {
   Props,
 } from '@storybook/addon-docs/blocks';
 import Location from 'q3-ui-test-utils/lib/location';
-import Notifications from '../src/Notifications';
+import Notifications from '..';
 import data from './fixture';
 
 <Meta
