style: dialog for scanning

--- a/packages/q3-ui-docscan/src/DocScan/DocScan.stories.mdx
+++ b/packages/q3-ui-docscan/src/DocScan/DocScan.stories.mdx
@@ -4,6 +4,7 @@ import {
   Preview,
   Props,
 } from '@storybook/addon-docs/blocks';
+import { Container, Box } from '@material-ui/core';
 import DocScan from './DocScan';
 
 <Meta title="DocScan" component={DocScan} />
@@ -12,6 +13,15 @@ import DocScan from './DocScan';
 
 <Preview>
   <Story name="Using webcam">
-    <DocScan />
+    <Container>
+      <Box maxWidth={320} p={2}>
+        <DocScan
+          upload={(f) => {
+            console.log(f);
+            return Promise.resolve();
+          }}
+        />
+      </Box>
+    </Container>
   </Story>
 </Preview>
