fix: clone seed values on restart

--- a/packages/q3-ui-forms/stories/Builders.stories.mdx
+++ b/packages/q3-ui-forms/stories/Builders.stories.mdx
@@ -91,6 +91,20 @@ Sometimes, we'll need something else.
   </Story>
 </Preview>
 
+### Reset
+
+If you want to reset the form afterwards.
+
+<Preview>
+  <Story name="Reset">
+    <Form restart debug onSubmit={() => Promise.resolve()}>
+      <Field name="title" type="text" />
+      <Field name="date" type="date" />
+      <Field name="editor" type="editor" />
+    </Form>
+  </Story>
+</Preview>
+
 ## API
 
 <Props of={InnerForm} />
