refactor: identify mongodb objectids

--- a/packages/q3-ui-filters/src/components/Filters/Filters.stories.mdx
+++ b/packages/q3-ui-filters/src/components/Filters/Filters.stories.mdx
@@ -28,7 +28,7 @@ import Filters from './Filters';
     </Location>
   </Story>
   <Story name="Populated">
-    <Location initialPath="?employment.company=in(Seagull%2COvation%2CGretsch%2CWashburn%2CFender%2CGibson)&employment.position=string(%2Fstartswith%2Fgi)&createdAt%3E=2021-12-14T05%3A00%3A00.000Z&createdAt%3C=2022-01-01T04%3A59%3A59.000Z&verified=exists(true)&associates=in(bffe30f8-6c1c-41f3-9f8a-0901a8f43c80,9095d570-5871-40b7-8b67-4eaa31231fe2)">
+    <Location initialPath="?employment.company=in(Seagull%2COvation%2CGretsch%2CWashburn%2CFender%2CGibson)&employment.position=string(%2Fstartswith%2Fgi)&createdAt%3E=2021-12-14T05%3A00%3A00.000Z&createdAt%3C=2022-01-01T04%3A59%3A59.000Z&verified=exists(true)&associates=id(6387ba6b1cf0fe2bf175ab58,63dc27f85eedcf09764ab3bc)">
       <LocationDebugger>
         <Box p={2} maxWidth={320}>
           <Datasource>
